# superego-mcp

./: .coverage  .docker-bake-summary  .dockerignore  .env.example  .gitignore  .trivyignore  DEPLOYMENT_VALIDATION_CHECKLIST.md  LICENSE  README.md  build_report.json  debug_env.py  docker-bake.hcl  docker-compose.dev.yml  docker-compose.yml  hatch_build.py  justfile  pyproject.toml  pytest-container.ini  test-docker-dev.sh  test_client_demo.py  trivy.yaml
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  entrypoint.sh
.devcontainer/scripts/: dev-status.sh  quick-setup.sh  test-devcontainer.sh
.github/: buildkitd.toml
.github/workflows/: build-and-deploy.yml  build-with-bake.yml  build-with-bake.yml.disabled  ci.yml  release.yml
config/: rules.yaml  server-cli-example.yaml  server.yaml
data/config/: config.yaml  server.yaml
demo/: CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_SETUP.md  CLI_INFERENCE_SCENARIOS.md  DEMO_GUIDE.md  DEMO_README.md  README.md  README_CLAUDE_CODE.md  README_CLAUDE_CODE_HOOKS.md  TROUBLESHOOTING_CLI.md  TUTORIAL_Security_Evaluation_Interactive_Mode.md  __init__.py  base_demo.py  claude-code-demo.yaml  claude_code_demo.py  client.py  demo_agent.py  demo_dashboard.py  demo_utils.py  fastagent.config.anthropic.yaml  fastagent.config.openai.yaml  fastagent.config.yaml  fastagent.secrets.yaml.example  fastagent_demo.py  hook_simulator.py  interactive_hook_demo.py  multi_transport_demo.py  performance_demo.py  quick_start_cli.sh  scenario_runner.py  security_scenarios.py  setup_claude_hooks.sh  setup_verification.py  setup_verification_cli.py  simple_fastagent_demo.py  test_fastagent_connection.py  test_mcp_direct.py  test_mcp_integration.py  test_security_hook.py  test_security_hook_v2.py  test_security_scenarios.py  (+3 more)
demo/config/: README.md  rules.yaml
demo/config/fastagent/: fastagent.secrets.yaml.example
demo/config/superego/: rules-cli-demo.yaml  rules.yaml
demo/hooks/: audit_hook.py  security_hook.py  security_hook_v2.py
docker/development/: .dockerignore  Dockerfile.development  docker-dev.sh
docker/production/: Dockerfile  docker-entrypoint.sh
docs/: ARCHITECTURE_DIAGRAMS.md  CLAUDE_CODE_HOOKS_INTEGRATION.md  CLI_EVAL_README.md  CONTAINER_TESTING_IMPLEMENTATION.md  DATAFLOW_DIAGRAMS.md  DEPLOYMENT.md  DESIGN.md  DESIGN_FINAL.md  DESIGN_REVIEW.md  DOCKER-BAKE-GUIDE.md  INFERENCE_OPTIONS.md  INFERENCE_PROVIDERS.md  MULTI_TRANSPORT.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  REFACTOR_PLAN.md  SECURITY_ARCHITECTURE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SHUTDOWN_FIX_SUMMARY.md  SYSTEM_OVERVIEW.md  UNIFIED_SERVER_ARCHITECTURE.md  ai-sampling.md  claude-code-hooks-setup.md  container-usage.md  deployment-guide.md  development-setup.md  package-and-container-plan.md  python-mcp-docker-guide.md  troubleshooting.md
docs/demo/: CLAUDE_CODE_SETUP.md  DEMO_WORKFLOW.md
docs/demo/hooks/: config.yaml
docs/feat/: manual-test-harness.md
docs/tasks/: manual-test-harness.md
docs/tasks/prototype/: 1-project-setup-and-structure.md  10-ai-sampling-engine-with-fastmcp-20-integration.md  11-fastmcp-20-multi-transport-implementation.md  12-advanced-rule-pattern-matching-engine.md  13-performance-optimization-and-observability.md  2-domain-models-implementation.md  3-security-policy-engine.md  4-secure-prompt-builder.md  5-circuit-breaker-implementation.md  6-error-handling-and-logging.md  7-fastmcp-server-integration.md  8-fastagent-demo-setup.md  9-configuration-hot-reload-with-file-watching.md
just/: build.just  common.just  demo.just  deploy.just  dev.just  docker.just  performance.just  quality.just  test.just
monitoring/: loki.yml  prometheus.yml  promtail.yml
monitoring/rules/: superego-alerts.yml
nginx/: nginx.conf
nginx/conf.d/: superego.conf
scripts/: test_container_validation.py
security/: .env.production.template  README.md  deployment-checklist.md  docker-compose.security.yml  monitoring-alerts.yaml  production-config.yaml  resource-limits.yaml  security-policies.yaml  validate-security.sh
security/reports/: .gitkeep
specs/: feat-superego-mcp-server-tasks.md  feat-superego-mcp-server.md
src/superego_mcp/: __init__.py  _asset_checksums.json  _build_metadata.json  cli.py  cli_client.py  cli_eval.py  cli_hooks.py  main.py  main_optimized.py  stdio_main.py
src/superego_mcp/config/: minimal_rules.yaml  rules-inference-example.yaml  server.yaml
src/superego_mcp/domain/: __init__.py  claude_code_models.py  hook_integration.py  models.py  pattern_engine.py  repositories.py  security_policy.py  security_policy_optimized.py  services.py
src/superego_mcp/infrastructure/: __init__.py  ai_service.py  ai_service_optimized.py  circuit_breaker.py  config.py  config_watcher.py  error_handler.py  inference.py  logging_config.py  (+6 more)
test_harness/: __init__.py  cli.py
test_harness/client/: __init__.py  response_formatter.py  superego_client.py
test_harness/commands/: __init__.py  evaluate.py  health.py  hooks.py  interactive.py  load.py  scenarios.py
test_harness/config/: __init__.py  default.toml  dev.toml  loader.py
test_harness/scenarios/: __init__.py  claude_hooks.json  dangerous_tools.json  safe_tools.json
tests/: CONTAINER_TESTING.md  __init__.py  load_test_performance.py  test_ai_service.py  test_circuit_breaker.py  test_claude_code_hooks.py  test_cli_eval.py  test_cli_integration.py  test_cli_manual.py  test_config_watcher.py  test_container.py  test_domain_models.py  test_error_handler.py  test_error_handler_integration.py  test_health_monitor_hot_reload.py  test_hot_reload_integration.py  test_inference_integration.py  test_inference_interactive.py  test_inference_providers.py  test_interception_service.py  test_mcp_server_integration.py  test_multi_transport.py  test_multi_transport_integration.py  test_pattern_engine.py  test_pattern_performance.py  test_performance_optimization.py  test_prompt_builder.py  test_real_ai.py  test_sampling_fix.py  test_security_policy.py  test_security_policy_ai.py  test_security_policy_hot_reload.py  test_security_policy_patterns.py  test_unified_server.py
(+17 files in other folders)
